# tesladump

./: BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
.github/workflows/: push.yml  release.yml
cmd/tesladump/: BUILD.bazel  main.go
internal/: BUILD.bazel  listenandserve.go  mongo.go  option.go  service.go  service_test.go
internal/x/context/: BUILD.bazel
