load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tesladump_lib",
    srcs = ["main.go"],
    importpath = "github.com/uhthomas/tesladump/cmd/tesladump",
    visibility = ["//visibility:private"],
    deps = ["//internal"],
)

go_binary(
    name = "tesladump",
    embed = [":tesladump_lib"],
    visibility = ["//visibility:public"],
)
